Fix stack alignment on function calls in JIT on ARM

https://bugzilla.mozilla.org/show_bug.cgi?id=545747